# toolsobservatory

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: deploy.yaml
blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_alter_comment_options_alter_post_options.py
blog/templates/blog/: post_comment.html  post_detail.html  post_list.html  post_search.html  post_share.html
blog/templatetags/: blog_tags.py
main/: asgi.py  gunicorn.conf.py  settings.py  urls.py  wsgi.py
pages/: forms.py  urls.py  views.py
pages/templates/pages/: about.html  contact.html  home.html  privacy.html  terms.html
pages/tests/: test_views.py
templates/: 404.html  500.html  base.html  robots.txt  styleguide.html
templates/account/: account_inactive.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/includes/: alert.html  header.html  sidebar.html
templates/socialaccount/: login.html  signup.html
tools/: admin.py  forms.py  models.py  sitemaps.py  urls.py  views.py
tools/migrations/: 0001_initial.py  0002_category_tool_template_fragment_alter_tool_slug_and_more.py  0003_alter_category_options_remove_tool_js_tool_js_path_and_more.py
tools/static/tools/js/: markdown_to_html.js  qr_code_generator.js  temperature_converter.js  text_statistics.js  url_decoder.js  url_encoder.js
tools/templates/tools/: tool_detail.html  tool_error.html  tool_home.html  tool_list.html  tool_search.html
tools/templates/tools/fragments/: markdown_to_html.html  qr_code_generator.html  temperature_converter.html  text_statistics.html  url_decoder.html  url_encoder.html
users/: admin.py  factories.py  signals.py  urls.py
users/tests/: test_models.py  test_views.py
