[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-allauth[socialaccount]>=65.11.2",
    "django-extensions>=4.1",
    "django-taggit>=6.1.0",
    "markdown>=3.9",
    "python-dotenv>=1.1.1",
]
